--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
-version: '3.9'
+version: '3'
 
 services:
   django:
-     image: django-docker:0.0.1
-     build: .
-     ports:
-      - "900g0:9000"
-     environment:
-      - DEBUG=1
-      - SECRET_KEY=4832098kFS7y9834HJK3
-      - ALLOWED_HOSTS=192.168.178.90,localhost
+    build: .
+    command: gunicorn EnergieAPI.wsgi:application --bind 0.0.0.0:9000 --workers 3
+    volumes:
+      - .:/app
+    ports:
+      - "9000:9000"  #%20Map%20port%209000%20from%20the%20container%20to%20host
+    environment:
+      - DEBUG=0
+      - SECRET_KEY=CHANGEME
+      - ALLOWED_HOSTS=CHANGEME
